@@ -3,7 +3,7 @@
   <url>http://www.cs.wisc.edu/~ghost/doc/printer.htm</url>
   <execution>
     <ghostscript/>
-    <prototype>gs -q -dBATCH -dPARANOIDSAFER -dNOPAUSE%B%A%Z -sOutputFile=- - | perl -p -e "s/\xc0.\xf8\x26/\xc0%E\xf8\x26/g"</prototype>
+    <prototype>gs -q -dBATCH -dPARANOIDSAFER -dNOPAUSE%B%A%Z -sOutputFile=- - | perl -p -e &apos;if (! $did) { s/\xc0.\xf8\x26/\xc0%E\xf8\x26/ &amp;&amp; $did++; }&apos;</prototype>
     <ppdentry>
    *DefaultResolution: 1200dpi
   </ppdentry>
