@@ -1,3 +1,11 @@
+2005-08-15  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* driver/pxlmono.xml, driver/pxl1010.xml, driver/lj5gray.xml:
+	  Fixed Perl one-liner to select the paper tray. It inserted the
+	  paper tray code also in wrong places and so broke the
+	  data. Thanks to Jonathan Kamens (jik at kamens dot brookline dot
+	  ma dot us) for the patch.
+
 2005-08-04  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* driver/capt.xml, printer/Canon-LBP-810.xml,
